# summary-relay-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README.zh-CN.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
docs/architecture/: summary-relay-bot-architecture.drawio
docs/brainstorms/: 2026-06-03-telegram-summary-relay-bot-human-developer-brief-not-llm-context.md  2026-06-03-telegram-summary-relay-bot-requirements.md
docs/operations/: telegram-summary-relay-bot.md
docs/plans/: 2026-06-04-001-feat-telegram-summary-relay-bot-plan.md
migrations/: env.py
migrations/versions/: 20260604_0001_initial_schema.py  20260612_0002_llm_provider_models.py
src/summary_relay_bot/: __init__.py  config.py  main.py  scheduler.py
tests/: conftest.py
tests/integration/: test_group_collection.py  test_persistence.py  test_web_dashboard.py
tests/unit/: test_admin_commands.py  test_admin_replies.py  test_authorization.py  test_config.py  test_group_settings.py  test_llm_client.py  test_main.py  test_message_extraction.py  test_models.py  test_private_relay.py  test_retention.py  test_runtime_config.py  test_scheduler.py  test_secrets.py  test_summary_jobs.py  test_summary_notifications.py  test_telegram_userbot.py  test_userbot_auth_service.py  test_userbot_ingestion_service.py  test_userbot_runtime.py  test_web_audit_logs_api.py  test_web_auth.py  test_web_bot_api.py  test_web_groups_api.py  test_web_llm_provider_api.py  (+8 more)
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+219 files in other folders)
