[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "summary-relay-bot"
version = "0.1.0"
description = "Telegram group summary and private relay bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.6,<4",
  "SQLAlchemy[asyncio]>=2.0,<3",
  "asyncpg>=0.29,<1",
  "alembic>=1.13,<2",
  "APScheduler>=3.10,<4",
  "httpx>=0.27,<1",
  "anthropic>=0.92,<1",
  "cryptography>=41,<43",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
]

[project.scripts]
summary-relay-bot = "summary_relay_bot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
  "error::sqlalchemy.exc.SAWarning",
]
